[gd_scene load_steps=5 format=3 uid="uid://bnfrpmn2krhog"]

[ext_resource type="Script" path="res://scripts/ui/death_menu.gd" id="1_phx3f"]
[ext_resource type="Theme" uid="uid://b22lwt742gddp" path="res://resources/themes/ui_theme.tres" id="1_v5fww"]
[ext_resource type="Theme" uid="uid://dvsx5bwl1ujf1" path="res://resources/themes/large_text_theme.tres" id="2_nr35u"]
[ext_resource type="Script" path="res://scripts/ui_elements/sound_button.gd" id="4_3ik0x"]

[node name="DeathMenu" type="Control"]
process_mode = 3
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_v5fww")
script = ExtResource("1_phx3f")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -11.5
offset_right = 26.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_nr35u")
theme_override_colors/font_color = Color(0.796078, 0, 0, 1)
theme_override_font_sizes/font_size = 0
text = "GAME OVER"

[node name="LabelCause" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "You died :("
horizontal_alignment = 1

[node name="LabelScore" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Score: 5"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ButtonRetry" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
size_flags_horizontal = 4
text = "Retry"
script = ExtResource("4_3ik0x")

[node name="ButtonQuit" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
size_flags_horizontal = 4
text = "Quit"
script = ExtResource("4_3ik0x")

[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonRetry" to="." method="_on_button_retry_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonQuit" to="." method="_on_button_quit_pressed"]
